--- a/custom.org
+++ b/custom.org
@@ -2080,7 +2080,7 @@ function.
     (use-package color-theme-sanityinc-tomorrow
       :ensure t
       :config
-      (cond ((string-equal system-type "darwin")
+      (cond ((eq system-type 'darwin)
              (defun k20e/load-theme (mode)
                "Load light or dark theme depending on which mode the system is currently in."
                (pcase mode
